membuat automatis berita acara

--- a/pdf.html
+++ b/pdf.html
@@ -4,7 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>pdf</title>
-    <link href="assets/css/stylePdf.css" rel="stylesheet" type="text/css" />
+    <link
+      href="https://raw.githubusercontent.com/Rizsyad/slo/main/assets/css/stylePdf.css"
+      rel="stylesheet"
+      type="text/css"
+    />
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </head>
 
@@ -183,6 +187,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.0.272/jspdf.debug.js"></script>
     <script src="https://momentjs.com/downloads/moment-with-locales.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-url-parser/2.3.1/purl.min.js"></script>
-    <script src="assets/js/scriptPdf.js"></script>
+    <script src="https://raw.githubusercontent.com/Rizsyad/slo/main/assets/js/scriptPdf.js"></script>
   </body>
 </html>
