membuat automatis berita acara

--- a/pdf.html
+++ b/pdf.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>pdf</title>
     <link
-      href="https://raw.githubusercontent.com/Rizsyad/slo/main/assets/css/stylePdf.css"
+      href="https://cdn.jsdelivr.net/gh/Rizsyad/slo/assets/css/stylePdf.css"
       rel="stylesheet"
       type="text/css"
     />
@@ -187,6 +187,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.0.272/jspdf.debug.js"></script>
     <script src="https://momentjs.com/downloads/moment-with-locales.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-url-parser/2.3.1/purl.min.js"></script>
-    <script src="https://raw.githubusercontent.com/Rizsyad/slo/main/assets/js/scriptPdf.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/Rizsyad/slo/assets/js/scriptPdf.js"></script>
   </body>
 </html>
