--- a/pdf.html
+++ b/pdf.html
@@ -110,7 +110,9 @@
             </td>
             <td class="c1" colspan="1" rowspan="1">
               <p class="c0">
-                <span class="c8">Bogor, <span class="tanggal"></span></span>
+                <span class="c8"
+                  ><span class="tempat"></span>, <span class="tanggal"></span
+                ></span>
               </p>
             </td>
           </tr>
