--- a/pdf.html
+++ b/pdf.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>pdf</title>
     <link
-      href="https://cdn.jsdelivr.net/gh/Rizsyad/slo/assets/css/stylePdf.css"
+      href="https://cdn.jsdelivr.net/gh/Rizsyad/slo/assets/css/stylePdf.min.css"
       rel="stylesheet"
       type="text/css"
     />
@@ -184,11 +184,11 @@
       <p class="c2 c17"><span class="c7"></span></p>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.0.272/jspdf.debug.js"></script>
-    <script src="https://momentjs.com/downloads/moment-with-locales.js"></script>
+    <script src="https://momentjs.com/downloads/moment-with-locales.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-url-parser/2.3.1/purl.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/Rizsyad/slo/assets/js/scriptPdf.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/Rizsyad/slo/assets/js/scriptPdf.min.js"></script>
   </body>
 </html>
