--- a/setting.html
+++ b/setting.html
@@ -162,185 +162,9 @@
       </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"></script>
-    <script>
-      $(document).ready(function () {
-        const setLocalStorage = (key, value) =>
-          window.localStorage.setItem(key, value);
-        const getLocalStorage = (key) => window.localStorage.getItem(key);
-        const arrayData = (role) => JSON.parse(getLocalStorage(role)) || [];
-
-        const getAkun = (role, id) => {
-          const getData = JSON.parse(getLocalStorage(role));
-          const akun = getData.find((o) => o.id == id);
-
-          return akun;
-        };
-
-        const createList = (role, nama, username, password, id) => {
-          const oldData = arrayData(role);
-          let objData;
-          let newList;
-
-          if (id) {
-            newList = oldData.map((item) => {
-              if (item.id == id) {
-                objData = {
-                  id,
-                  nama,
-                  username,
-                  password,
-                };
-                return objData;
-              }
-
-              return item;
-            });
-          } else {
-            objData = {
-              id: Math.round(Math.random() * 100),
-              nama,
-              username,
-              password,
-            };
-            newList = [...oldData, objData];
-          }
-
-          return newList;
-        };
-
-        const newAkun = (role, nama, username, password, id) => {
-          const listData = createList(role, nama, username, password, id);
-          return setLocalStorage(role, JSON.stringify(listData));
-        };
-
-        const deleteAkun = (role, id) => {
-          const oldData = arrayData(role);
-          const filterData = oldData.filter((item) => item.id !== parseInt(id));
-          return setLocalStorage(role, JSON.stringify(filterData));
-        };
-
-        const createRow = (role, select) => {
-          const data = arrayData(role);
-          let rowData = "";
-
-          if (data.length == 0) {
-            return $(select).append(
-              `<tr class="text-center"><td colspan="5">Data ${role.toUpperCase()} tidak ada</td></tr>`
-            );
-          }
-
-          data.forEach((el, index) => {
-            rowData += `<tr>
-            <td>${index + 1}</td>
-            <td>${el.nama}</td><td>${el.username}</td>
-            <td>${el.password}</td>
-            <td>
-              <button class="btn btn-warning btn-sm my-1 edit-data" data-role="${role}" data-id="${
-              el.id
-            }">
-                <i class="fa-solid fa-pen-to-square"></i>
-              </button>
-              <button class="btn btn-danger btn-sm my-1 remove-data" data-nama="${
-                el.nama
-              }" data-role="${role}" data-id="${el.id}">
-                <i class="fa-solid fa-trash"></i>
-              </button></td>
-          </tr>`;
-          });
-
-          $(select).append(rowData);
-        };
-
-        createRow("pjt", "#data-pjt");
-        createRow("tt", "#data-tt");
-        createRow("gm", "#data-gm");
-
-        // add and edit
-        const clearInput = () => {
-          $("#role").val("");
-          $("#nama").val("");
-          $("#username").val("");
-          $("#password").val("");
-          $("#id").val("");
-        };
-
-        $(".add-data").on("click", function () {
-          clearInput();
-          const roleData = $(this).attr("data-role");
-          $("#role").val(roleData);
-          $("#add-modal").modal("show");
-          $(".modal-title").text(`Add ${roleData.toUpperCase()}`);
-        });
-
-        $("#save-data").on("click", function () {
-          const role = $("#role").val();
-          const nama = $("#nama").val();
-          const username = $("#username").val();
-          const password = $("#password").val();
-
-          const idEdit = $("#id").val();
-          const isModeEdit = idEdit !== "";
-          const kataAlert = isModeEdit ? "Diedit" : "Ditambah";
-
-          newAkun(role, nama, username, password, idEdit);
-
-          Swal.fire("Sukses", `Akun Berhasil ${kataAlert}`, "success").then(
-            () => {
-              location.reload();
-            }
-          );
-        });
-
-        $(".edit-data").on("click", function () {
-          let roleData = $(this).attr("data-role");
-          let idData = $(this).attr("data-id");
-
-          const dataAkun = getAkun(roleData, idData);
-
-          let { nama, role, username, password } = dataAkun;
-
-          $("#role").val(roleData);
-          $("#nama").val(nama);
-          $("#username").val(username);
-          $("#password").val(password);
-          $("#id").val(idData);
-
-          $("#add-modal").modal("show");
-          $(".modal-title").text(`Edit ${roleData.toUpperCase()}`);
-        });
-
-        $(".remove-data").on("click", function () {
-          let roleData = $(this).attr("data-role");
-          let idData = $(this).attr("data-id");
-          let namaData = $(this).attr("data-nama");
-
-          Swal.fire({
-            title: "Apakah kamu yakin?",
-            html: `ingin menghapus akun ${roleData.toUpperCase()} dengan nama <b>${namaData}</b>? <br/> Anda tidak akan dapat mengembalikan ini!`,
-            icon: "warning",
-            showCancelButton: true,
-            confirmButtonColor: "#3085d6",
-            cancelButtonColor: "#d33",
-            confirmButtonText: "Ya, Hapus!",
-            cancelButtonText: "Batal",
-          }).then((result) => {
-            if (result.isConfirmed) {
-              deleteAkun(roleData, idData);
-
-              Swal.fire({
-                title: "Dihapus!",
-                html: `Akun ${roleData.toUpperCase()} dengan nama <b>${namaData}</b> telah dihapus.`,
-                icon: "success",
-              }).then(() => {
-                location.reload();
-              });
-            }
-          });
-        });
-      });
-    </script>
+    <script src="https://cdn.jsdelivr.net/gh/Rizsyad/slo/assets/js/scriptSetting.min.js"></script>
   </body>
 </html>
