--- a/setting.html
+++ b/setting.html
@@ -42,6 +42,13 @@
               role="tab"
               >GM/Biasa</a
             >
+            <a
+              class="list-group-item list-group-item-action"
+              data-toggle="list"
+              href="#doc"
+              role="tab"
+              >Buat Dokumen</a
+            >
           </div>
         </div>
         <div class="col-md-8 col-sm-12">
@@ -102,6 +109,58 @@
                   <tbody id="data-gm"></tbody>
                 </table>
               </div>
+            </div>
+            <div class="tab-pane" id="doc" role="tabpanel">
+              <h1>Berita Acara</h1>
+              <div class="form-group">
+                <label for="nama">Nama Pemohon: </label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="namapemohon"
+                  placeholder="Input Nama Pemohon"
+                />
+              </div>
+              <div class="form-group">
+                <label for="alamat">Alamat: </label>
+                <textarea
+                  id=""
+                  rows="5"
+                  class="form-control"
+                  id="alamat"
+                  placeholder="Input Alamat"
+                ></textarea>
+              </div>
+              <div class="form-group">
+                <label for="nama">Provinsi: </label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="provinsi"
+                  placeholder="Input Provinsi"
+                />
+              </div>
+              <div class="form-group">
+                <label for="nama">Kota/Kabupaten: </label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="kota"
+                  placeholder="Input Kota"
+                />
+              </div>
+              <div class="form-group">
+                <label for="nama">Tempat pembuat surat: </label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="tempat"
+                  placeholder="Input Tempat Pembuat Surat"
+                />
+              </div>
+              <button class="btn btn-primary btn-block mb-3 link-buat">
+                Buat
+              </button>
             </div>
           </div>
         </div>
@@ -165,6 +224,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/Rizsyad/slo/assets/js/scriptSetting.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/gh/Rizsyad/slo/assets/js/scriptSetting.min.js"></script> -->
+    <script src="./assets/js/scriptSetting.js"></script>
   </body>
 </html>
