--- a/setting.html
+++ b/setting.html
@@ -213,5 +213,6 @@
     <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/Rizsyad/slo/assets/js/scriptSetting.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/Rizsyad/slo/assets/js/scriptUtilities.min.js"></script>
   </body>
 </html>
