--- a/setting.html
+++ b/setting.html
@@ -66,7 +66,7 @@
                 Add PJT
               </button>
               <div class="table-responsive mt-3">
-                <table class="table table-bordered table-striped pjt">
+                <table class="table table-bordered table-striped pjt w-100">
                   <thead class="thead-dark"></thead>
                   <tbody></tbody>
                 </table>
@@ -77,7 +77,7 @@
                 Add TT
               </button>
               <div class="table-responsive mt-3">
-                <table class="table table-bordered table-striped tt">
+                <table class="table table-bordered table-striped tt w-100">
                   <thead class="thead-dark"></thead>
                   <tbody></tbody>
                 </table>
@@ -88,7 +88,7 @@
                 Add GM/Biasa
               </button>
               <div class="table-responsive mt-3">
-                <table class="table table-bordered table-striped gm">
+                <table class="table table-bordered table-striped gm w-100">
                   <thead class="thead-dark"></thead>
                   <tbody></tbody>
                 </table>
