--- a/setting.html
+++ b/setting.html
@@ -1,240 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Setting Akun SLO</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap4.min.css"
-    />
 
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  </head>
-  <body>
-    <div class="container-fluid mt-5">
-      <div class="row">
-        <div class="col-md-4 col-sm-12 mb-3">
-          <div class="list-group" id="list-tab" role="tablist">
-            <a
-              class="list-group-item list-group-item-action active"
-              data-toggle="list"
-              href="#pjt"
-              role="tab"
-              >PJT</a
-            >
-            <a
-              class="list-group-item list-group-item-action"
-              data-toggle="list"
-              href="#tt"
-              role="tab"
-              >TT</a
-            >
-            <a
-              class="list-group-item list-group-item-action"
-              data-toggle="list"
-              href="#gm"
-              role="tab"
-              >GM/Biasa</a
-            >
-            <a
-              class="list-group-item list-group-item-action"
-              data-toggle="list"
-              href="#doc"
-              role="tab"
-              >Buat Dokumen</a
-            >
-            <a
-              class="list-group-item list-group-item-action"
-              data-toggle="list"
-              href="#setting"
-              role="tab"
-              >Setting</a
-            >
-          </div>
-        </div>
-        <div class="col-md-8 col-sm-12">
-          <div class="tab-content">
-            <div class="tab-pane active" id="pjt" role="tabpanel">
-              <button class="btn btn-primary add-data" data-role="pjt">
-                Add PJT
-              </button>
-              <div class="table-responsive mt-3">
-                <table class="table table-bordered table-striped pjt w-100">
-                  <thead class="thead-dark"></thead>
-                  <tbody></tbody>
-                </table>
-              </div>
-            </div>
-            <div class="tab-pane" id="tt" role="tabpanel">
-              <button class="btn btn-primary add-data" data-role="tt">
-                Add TT
-              </button>
-              <div class="table-responsive mt-3">
-                <table class="table table-bordered table-striped tt w-100">
-                  <thead class="thead-dark"></thead>
-                  <tbody></tbody>
-                </table>
-              </div>
-            </div>
-            <div class="tab-pane" id="gm" role="tabpanel">
-              <button class="btn btn-primary add-data" data-role="gm">
-                Add GM/Biasa
-              </button>
-              <div class="table-responsive mt-3">
-                <table class="table table-bordered table-striped gm w-100">
-                  <thead class="thead-dark"></thead>
-                  <tbody></tbody>
-                </table>
-              </div>
-            </div>
-            <div class="tab-pane" id="doc" role="tabpanel">
-              <h1>Berita Acara</h1>
-              <div class="form-group">
-                <label for="nama">Nama Pemohon: </label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="namapemohon"
-                  placeholder="Input Nama Pemohon"
-                />
-              </div>
-              <div class="form-group">
-                <label for="alamat">Alamat: </label>
-                <textarea
-                  rows="5"
-                  class="form-control"
-                  id="alamat"
-                  placeholder="Input Alamat"
-                ></textarea>
-              </div>
-              <div class="form-group">
-                <label for="nama">Provinsi: </label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="provinsi"
-                  placeholder="Input Provinsi"
-                />
-              </div>
-              <div class="form-group">
-                <label for="nama">Kota/Kabupaten: </label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="kota"
-                  placeholder="Input Kota"
-                />
-              </div>
-              <div class="form-group">
-                <label for="nama">Tempat pembuat surat: </label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="tempat"
-                  placeholder="Input Tempat Pembuat Surat"
-                />
-              </div>
-              <button class="btn btn-primary btn-block mb-3 link-buat">
-                Buat
-              </button>
-              <button class="btn btn-outline-danger btn-block mb-3 clear">
-                Clear
-              </button>
-            </div>
-            <div class="tab-pane" id="setting" role="tabpanel">
-              <button
-                class="btn btn-primary mb-3"
-                onclick="localStorageBackup();"
-              >
-                Backup
-              </button>
-              <button
-                class="btn btn-primary mb-3"
-                onclick="localStorageRestore();"
-              >
-                Restore
-              </button>
-            </div>
-          </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Setting Akun SLO</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.css" />
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap4.min.css" />
+
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+</head>
+
+<body>
+  <div class="container-fluid mt-5">
+    <div class="row">
+      <div class="col-md-4 col-sm-12 mb-3">
+        <div class="list-group" id="list-tab" role="tablist">
+          <a class="list-group-item list-group-item-action active" data-toggle="list" href="#pjt" role="tab">PJT</a>
+          <a class="list-group-item list-group-item-action" data-toggle="list" href="#tt" role="tab">TT</a>
+          <a class="list-group-item list-group-item-action" data-toggle="list" href="#gm" role="tab">GM/Biasa</a>
+          <a class="list-group-item list-group-item-action" data-toggle="list" href="#doc" role="tab">Buat Dokumen</a>
+          <a class="list-group-item list-group-item-action" data-toggle="list" href="#setting" role="tab">Setting</a>
         </div>
       </div>
-    </div>
-
-    <!-- Modal -->
-    <div
-      class="modal fade"
-      id="add-modal"
-      tabindex="-1"
-      role="dialog"
-      aria-labelledby="exampleModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title">semua ada Add PJT</h5>
-            <button
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">&times;</span>
+      <div class="col-md-8 col-sm-12">
+        <div class="tab-content">
+          <div class="tab-pane active" id="pjt" role="tabpanel">
+            <button class="btn btn-primary add-data" data-role="pjt">
+              Add PJT
             </button>
-          </div>
-          <div class="modal-body">
-            <div class="form-group">
-              <input type="hidden" id="role" />
-              <input type="hidden" id="id" />
-              <label for="nama">Nama</label>
-              <input type="text" class="form-control" id="nama" />
-            </div>
-            <div class="form-group">
-              <label for="username">Username</label>
-              <input type="text" class="form-control" id="username" />
-            </div>
-            <div class="form-group">
-              <label for="password">Password</label>
-              <input type="text" class="form-control" id="password" />
+            <div class="table-responsive mt-3">
+              <table class="table table-bordered table-striped pjt w-100">
+                <thead class="thead-dark"></thead>
+                <tbody></tbody>
+              </table>
             </div>
           </div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-dismiss="modal"
-            >
-              Close
+          <div class="tab-pane" id="tt" role="tabpanel">
+            <button class="btn btn-primary add-data" data-role="tt">
+              Add TT
             </button>
-            <button type="button" class="btn btn-primary asd" id="save-data">
-              Save
+            <div class="table-responsive mt-3">
+              <table class="table table-bordered table-striped tt w-100">
+                <thead class="thead-dark"></thead>
+                <tbody></tbody>
+              </table>
+            </div>
+          </div>
+          <div class="tab-pane" id="gm" role="tabpanel">
+            <button class="btn btn-primary add-data" data-role="gm">
+              Add GM/Biasa
+            </button>
+            <div class="table-responsive mt-3">
+              <table class="table table-bordered table-striped gm w-100">
+                <thead class="thead-dark"></thead>
+                <tbody></tbody>
+              </table>
+            </div>
+          </div>
+          <div class="tab-pane" id="doc" role="tabpanel">
+            <h1>Berita Acara</h1>
+            <div class="form-group">
+              <label for="nama">Nama Pemohon: </label>
+              <input type="text" class="form-control" id="namapemohon" placeholder="Input Nama Pemohon" />
+            </div>
+            <div class="form-group">
+              <label for="alamat">Alamat: </label>
+              <textarea rows="5" class="form-control" id="alamat" placeholder="Input Alamat"></textarea>
+            </div>
+            <div class="form-group">
+              <label for="nama">Provinsi: </label>
+              <select type="text" class="form-control" id="provinsi" placeholder="Input Provinsi"></select>
+            </div>
+            <div class="form-group">
+              <label for="nama">Kota/Kabupaten: </label>
+              <select type="text" class="form-control" id="kota" placeholder="Input Kota"></select>
+            </div>
+            <div class="form-group">
+              <label for="nama">Tempat pembuat surat: </label>
+              <input type="text" class="form-control" id="tempat" placeholder="Input Tempat Pembuat Surat" />
+            </div>
+            <button class="btn btn-primary btn-block mb-3 link-buat">
+              Buat
+            </button>
+            <button class="btn btn-outline-danger btn-block mb-3 clear">
+              Clear
+            </button>
+          </div>
+          <div class="tab-pane" id="setting" role="tabpanel">
+            <button class="btn btn-primary mb-3" onclick="localStorageBackup();">
+              Backup
+            </button>
+            <button class="btn btn-primary mb-3" onclick="localStorageRestore();">
+              Restore
             </button>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"></script>
-    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap4.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/Rizsyad/slo/assets/js/scriptSetting.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/Rizsyad/slo/assets/js/scriptUtilities.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/todvora/localstorage-backup/functions.js"></script>
-  </body>
+  <!-- Modal -->
+  <div class="modal fade" id="add-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">semua ada Add PJT</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="form-group">
+            <input type="hidden" id="role" />
+            <input type="hidden" id="id" />
+            <label for="nama">Nama</label>
+            <input type="text" class="form-control" id="nama" />
+          </div>
+          <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" class="form-control" id="username" />
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input type="text" class="form-control" id="password" />
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">
+            Close
+          </button>
+          <button type="button" class="btn btn-primary asd" id="save-data">
+            Save
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"></script>
+  <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+  <script src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap4.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/Rizsyad/slo/assets/js/scriptSetting.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/Rizsyad/slo/assets/js/scriptUtilities.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/todvora/localstorage-backup/functions.js"></script>
+</body>
+
 </html>
