--- a/setting.html
+++ b/setting.html
@@ -71,7 +71,8 @@
               <input type="text" class="form-control" id="namapemohon" placeholder="Input Nama Pemohon" />
             </div>
             <div class="form-group">
-              <label for="alamat">Alamat: </label>
+              <label for="
+              ">Alamat: </label>
               <textarea rows="5" class="form-control" id="alamat" placeholder="Input Alamat"></textarea>
             </div>
             <div class="form-group">
@@ -101,7 +102,7 @@
             </div>
             <div class="form-group">
               <label for="alamat">Alamat</label>
-              <textarea id="alamat" class="form-control" cols="30" rows="10"></textarea>
+              <textarea id="alamatinv" class="form-control" cols="30" rows="10"></textarea>
             </div>
             <div class="form-group">
               <label for="slo">SLO</label>
