--- a/invoice.html
+++ b/invoice.html
@@ -424,7 +424,7 @@
         <p class="c6"><span class="c14">INVOICE</span></p>
         <p class="c3 c5"><span class="c2 c4"></span></p>
         <p class="c3 c5"><span class="c2 c4"></span></p>
-        <p class="c3"><span class="c2 c4">Tangerang, <span class="tanggal">28 februari 2023</span></span></p>
+        <p class="c3"><span class="c2 c4">Tangerang, <span class="tanggal"></span></span></p>
         <p class="c3"><span
                 class="c2 c4">Klien&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:
                 <span class="nama"></span></span></p>
